added my progress for the first of sep

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -659,15 +659,20 @@
       </p>
       <h1>30 of August</h1>
       <p>Fixing the date between and not between</p>
+      <h1>31 of August</h1>
+      <p>
+        Fixing the first item of preset name to be update when user adds changes
+      </p>
+      <p>
+        Fixing the update to allow the user to see the confiramtions while the
+        add changes
+      </p>
+      <h1>1 st of Sept</h1>
+      <p>
+        Add conditon to the clear preset to not allow the user to clik the
+        "clear preset" while there is noting to the form
+      </p>
     </li>
-    <h1>31 of August</h1>
-    <p>
-      Fixing the first item of preset name to be update when user adds changes
-    </p>
-    <p>
-      Fixing the update to allow the user to see the confiramtions while the add
-      changes
-    </p>
 
     <li>
       3) UI redesigned.
@@ -700,6 +705,12 @@
       <p>
         Fixing styles of ion-select-option on ios and making the line matches
       </p>
+      <h1>1st of september</h1>
+      <p>
+        Add display none for background actived to the ion-button( this is
+        removing the blue color active while user click the icon add or other in
+        ios)
+      </p>
     </li>
 
     <li>
@@ -718,6 +729,9 @@
       <p>
         Adding ion-modal for the mobile and tablet and stay as it is on desktop
       </p>
+      <h1>1st of Sept</h1>
+      <p>Removing unused style</p>
+      <p>Created object to store all the confirmation text and message</p>
     </li>
   </div>
 </ion-content>
