added my progress for the first of sep

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -670,7 +670,7 @@
       <h1>1 st of Sept</h1>
       <p>
         Add conditon to the clear preset to not allow the user to clik the
-        "clear preset" while there is noting to the form
+        "clear preset" while there is noting to the form(in progress)
       </p>
     </li>
 
