--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -672,6 +672,8 @@
         Add conditon to the clear preset to not allow the user to clik the
         "clear preset" while there is noting to the form(in progress)
       </p>
+      <h2>2 of Sept</h2>
+      <p>Fixing the clear preset</p>
     </li>
 
     <li>
