Adding tooltip to the clear third field and working on progress with the removing white border-radius( 5 th of Sept)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -270,6 +270,7 @@
                         class="clear-param3"
                         *ngIf="this.allSearch().controls[i].get('param3')?.value !== ''"
                         (click)="handleClear(i)"
+                        [tooltip]="'clear'"
                       >
                         <ion-icon src="../../assets/icon/close-outline.svg">
                         </ion-icon>
