Adding my progress for 5th of Sept

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -711,12 +711,17 @@
         removing the blue color active while user click the icon add or other in
         ios)
       </p>
+      <h1>5 th of Sept</h1>
+      <p>Adding tooltip to the clear third and fourth fields</p>
+      <p>Cleaning the code</p>
     </li>
 
     <li>
       4) Working on progress
       <h1>12 of August</h1>
       <p>working with the discard</p>
+      <h1>5 th of Sept</h1>
+      <p>Working on progress for removing the white border on ion-popover</p>
     </li>
     <li>
       5) Optimisation :
