Adding my progrress

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -662,6 +662,8 @@
       </p>
       <h2>2 of Sept</h2>
       <p>Fixing the clear preset</p>
+      <h1>7 of Sept</h1>
+      <p>Removing the button to clear preset and the functionality on ts</p>
     </li>
 
     <li>
