Removing unused code, fixing the name of class(8 ofAugust)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -105,7 +105,7 @@
                     *ngFor="let quantity of allSearch()?.controls; let i = index ;
                   "
                     [formGroupName]="i"
-                    class="example-box preset-row"
+                    class="form-row preset-row"
                   >
                     <div class="icon">
                       <div>
