Update the message and add style to make the information after user save, delete,or clear into the center(9 of Sept)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -428,8 +428,7 @@
             </ion-item>
             <ion-item lines="none">
               <ion-row class="save-row ion-align-items-center">
-                <ion-col size-xs="3" size-sm="2" class="modi-btn"> </ion-col>
-                <ion-col class="error-col" size-xs="4" size-sm="3">
+                <ion-col class="error-col">
                   <ion-text
                     ><span class="message" id="message"
                       >{{message}}</span
