--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -597,6 +597,9 @@ ion-datetime {
 .icon {
   display: flex;
 }
+.error-col {
+  text-align: center;
+}
 
 @media only screen and (max-width: 600px) {
   .list {
