Add functionality to allow the user to reload from backend (13 of Sept)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -424,6 +424,14 @@
                     >Search</ion-button
                   >
                 </ion-col>
+                <ion-col>
+                  <ion-button
+                    (click)="getDateTest()"
+                    class="apply-btn"
+                    [tooltip]="'search filter'"
+                    >Search test button</ion-button
+                  >
+                </ion-col>
               </ion-row>
             </ion-item>
             <ion-item lines="none">
