--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -420,7 +420,7 @@
                     (click)="getDateTest()"
                     class="apply-btn"
                     [tooltip]="'search filter'"
-                    >Search test button</ion-button
+                    >Load panel data</ion-button
                   >
                   <ion-button
                     [disabled]="this.allSearch().value[0].param1 === '' ? true : false"
