Fixing style and add class on the html (14 of sept)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -413,7 +413,7 @@
                 </ion-grid>
               </div>
             </form>
-            <ion-item>
+            <ion-item class="filter-search">
               <ion-row class="btn-group">
                 <ion-col size-xs="12" size-sm="12" class="apply-filter">
                   <ion-button
