Create an new file to store the object and array (14 of Sept)

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -713,6 +713,11 @@
       <p>Cleaning the code</p>
       <h1>6 th of Sept</h1>
       <p>Fixing the removing the white border on ion-popover</p>
+      <h1>14 Of Sept</h1>
+      <p>
+        Fixing the stile(making the searh button to aline with the form and
+        (...) )
+      </p>
     </li>
 
     <li>
@@ -736,6 +741,8 @@
       <h1>1st of Sept</h1>
       <p>Removing unused style</p>
       <p>Created object to store all the confirmation text and message</p>
+      <h1>14 of Sept</h1>
+      <p>Create a new file to store all the search data and all the message</p>
     </li>
   </div>
 </ion-content>
