--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -545,7 +545,13 @@ ion-datetime {
     z-index: 999;
     bottom: 0.25rem; 
     height: auto;
+   
+
   }
+  .clear-param3::part(native) {
+    --background-hover: beige;
+  }
+ 
 }
 .input-range-end {
   position: relative;
@@ -555,9 +561,10 @@ ion-datetime {
     bottom: 0.25rem;
     z-index: 999;
     height: auto;
-
   }
-
+  .clear-param4::part(native) {
+    --background-hover: beige;
+  }
 }
 
 .disable-preset-menu {
