Add an update on my progress

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -549,6 +549,18 @@
   </ng-template>
   <div class="my-progress">
     <li>
+      <h1>UI</h1>
+      <h2>15 of Sept</h2>
+      <p>Adding tooltip on the fourth field.</p>
+      <p>Adding background color with the X when user hover it.</p>
+    </li>
+
+    <li>
+      <h1>Optimisation</h1>
+      <h2>15 of Sept</h2>
+      <p>Move some code from tab1.page.ts into tab1.ts</p>
+    </li>
+    <!-- <li>
       1) Features Added :
       <h1>9 of August</h1>
       <p>- Add a "Presets: " label to the left of current preset name.</p>
@@ -719,6 +731,7 @@
         Fixing the stile(making the searh button to aline with the form and
         (...) )
       </p>
+
     </li>
 
     <li>
@@ -744,6 +757,6 @@
       <p>Created object to store all the confirmation text and message</p>
       <h1>14 of Sept</h1>
       <p>Create a new file to store all the search data and all the message</p>
-    </li>
+    </li> -->
   </div>
 </ion-content>
