--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -34,7 +34,6 @@
         [prop]="column.name |lowercase"
         [flexGrow]="3"
         *ngFor="let column of columns"
-        [style.color]="'pink'"
       >
         <ng-template
           let-column="column"
@@ -43,7 +42,7 @@
         >
           <span class="datatable-header-cell-wrapper">
             <span
-              class="datatable-header-cell-label draggable"
+              class="datatable-header-cell-label draggable'"
               (click)="sort($event)"
               [attr.aria-label]="column.name"
             >
