--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -42,7 +42,7 @@
         >
           <span class="datatable-header-cell-wrapper">
             <span
-              class="datatable-header-cell-label draggable'"
+              class="datatable-header-cell-label draggable"
               (click)="sort($event)"
               [attr.aria-label]="column.name"
             >
